Move to GWT 2.10